click event is working with several if statements; working on the battle aspects, not removing the enemey picture when he is defeated

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 		</div>
 		<div id="options">
 			<h2>Fight Section</h2>
-			<button id="attackButton" value="attack"><h3>Attack</h3></button>
+			<button id="attackButton" value="attack">Attack</button>
 		</div>
 		<div id="defender">
 			<h2>Defender</h2>
