added the character name and hp to the html page, corrected the js file to account for the div that wraps the 2 paragraphs and image, adjusted the css a little

--- a/home.html
+++ b/home.html
@@ -11,25 +11,50 @@
 
 	<div class="container">
 		<h1>Star Wars RPG</h1>
+
+		<h2>Select your Character</h2>
 		<div id="select">
-			<h2>Select your Character</h2>
-			<img src="./assets/images/obiwan.jpg" id="obiWanKenobe">
-			<img src="./assets/images/skywalker.jpeg" id="lukeSkywalker">
-			<img src="./assets/images/sidious.jpg" id="darthSidious">
-			<img src="./assets/images/maul.jpeg" id="darthMaul">
+			<div id="obiWanKenobe" class="character">
+				<p>Obi-Wan Kenobe</p>
+				<img src="./assets/images/obiwan.jpg" alt="Obi-Wan Kenobe image">
+				<p id="obiWanKenobe-hp"></p>
+			</div>
+			<div id="lukeSkywalker" class="character">
+				<p>Luke Skywalker</p>
+				<img src="./assets/images/skywalker.jpeg" alt="Luke Skywalker image">
+				<p id="lukeSkywalker-hp"></p>
+			</div>
+			<div id="darthSidious" class="character">
+				<p>Darth Sidious</p>
+				<img src="./assets/images/sidious.jpg" alt="Darth Sidious image">
+				<p id="darthSidious-hp"></p>
+			</div>
+			<div id="darthMaul" class="character">
+				<p>Darth Maul</p>
+				<img src="./assets/images/maul.jpeg" alt="Darth Maul image">
+				<p id="darthMaul-hp"></p>
+			</div>
 		</div>
+
+		<h2>Your Character</h2>
 		<div id="your-character">
-			<h2>Your Character</h2>
+			
 		</div>
+
+		<h2>Enemies Available To Attack</h2>
 		<div id="enemies">
-			<h2>Enemies Available To Attack</h2>
+			
 		</div>
+
+
 		<div id="options">
 			<h2>Fight Section</h2>
 			<button id="attackButton" value="attack">Attack</button>
 		</div>
+
+		<h2>Defender</h2>
 		<div id="defender">
-			<h2>Defender</h2>
+			
 		</div>
 	</div>
 
