pulled the code for the game out into a separate function and then had that function run when the document is ready and after the reset function is run; there are still some little bugs in displaying things that need to be corrected

--- a/home.html
+++ b/home.html
@@ -58,6 +58,7 @@
 		</div>
 		<p id="attackUpdate"></p>
 		<p id="counterUpdate"></p>
+		<button id="resetButton" value="reset" type="reset">Reset</button>
 	</div>
 
 </body>
