--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Star Wars RPG</title>
 	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./assets/javascript/game.js"></script>
